# VideoFaceExtractor

./: .gitignore  CMakeLists.txt  README.md
include/tqdm/: tqdm.hpp
src/: App.cpp  App.h  CNN_Detector.cpp  CNN_Detector.h  Extractor.cpp  Extractor.h  FaceDetector.cpp  FaceDetector.h  ListWriter.cpp  ListWriter.h  Main.cpp  Utils.cpp  Utils.h
